# ProjectAtlas

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
assets/: README.md
backend/: README.md  main.py
backend/analytics/: README.md
backend/api/: README.md
backend/backtesting/: README.md
backend/config/: README.md
backend/data/: README.md  __init__.py  exceptions.py
backend/data/providers/: README.md  __init__.py  kite_provider.py
backend/data/schemas/: README.md  __init__.py
backend/data/services/: README.md  __init__.py  market_data_service.py
backend/database/: README.md  base.py  engine.py  session.py
backend/database/models/: README.md  __init__.py  daily_price.py  stock.py  update_log.py
backend/indicators/: README.md
backend/ml/: README.md
backend/optimization/: README.md
backend/portfolio/: README.md
backend/strategies/: README.md
backend/utils/: README.md
docs/: README.md
frontend/: README.md
notebooks/: README.md
scripts/: README.md  __init__.py  init_db.py
tests/: README.md  conftest.py  test_main.py  test_market_data.py
