[project]
name = "project-atlas"
version = "0.1.0"
description = "Quantitative research platform for algorithmic trading, backtesting, portfolio optimization, and machine learning."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Aarya Chatterjee" }
]
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "black>=24.10",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
# A pragmatic starter set; add rules as the codebase grows.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# MyPy — reasonable strictness
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    ".venv/",
    "build/",
    "dist/",
]

# ---------------------------------------------------------------------------
# Pytest — minimal configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
